HUE-5565 [core] Avoid trademark font overlap on login page

--- a/desktop/core/src/desktop/static/desktop/css/login.css
+++ b/desktop/core/src/desktop/static/desktop/css/login.css
@@ -155,6 +155,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+  background-color: #FAFAFA;
 }
 
 @media screen and (max-width: 800px) {
